# UABE

./: .gitignore  CMakeLists.txt  README.md
.github/: README.md
.github/workflows/: build-test.yml  ci.yml  release.yml
Launcher/: CMakeLists.txt  CrossPlatformLauncher.cpp
Plugins/: CMakeLists.txt
UABE_macOS/: CMakeLists.txt  MainWindow_macOS.h  MainWindow_macOS.mm  README.md  api.h  macOSAppContext.cpp  macOSAppContext.h
