cmake_minimum_required (VERSION 3.18)
project (AssetBundleExtractor)
set(UABE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})

#set(THREADS_PREFER_PTHREAD_FLAG ON)
#find_package(Threads REQUIRED)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/CMakeModules")
#find_package(ispc_texcomp REQUIRED)
#find_package(texgenpack REQUIRED)
#find_package(mCtrl REQUIRED)
#find_package(jsmn REQUIRED)

#Enable C++20 support
set(CMAKE_CXX_STANDARD 23) #23, since MSVC++ no longer appears to enable std::format with standard 20.
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")

# Platform-specific compiler options
if(WIN32)
    add_compile_options(/W3)
    add_definitions(-DUNICODE)
    add_definitions(-D_UNICODE)
elseif(APPLE)
    add_compile_options(-Wall -Wextra)
    # Use fmt library instead of std::format for non-MSVC compilers
    find_package(PkgConfig)
    if(PkgConfig_FOUND)
        pkg_check_modules(FMT fmt)
        if(FMT_FOUND)
            add_definitions(-DUSE_FMT_LIBRARY)
        else()
            message(WARNING "fmt library not found. std::format may not be available.")
        endif()
    endif()
elseif(UNIX)
    add_compile_options(-Wall -Wextra)
    # Use fmt library instead of std::format for non-MSVC compilers  
    find_package(PkgConfig)
    if(PkgConfig_FOUND)
        pkg_check_modules(FMT fmt)
        if(FMT_FOUND)
            add_definitions(-DUSE_FMT_LIBRARY)
        else()
            message(WARNING "fmt library not found. std::format may not be available.")
        endif()
    endif()
endif()

include(depend.cmake)

add_subdirectory (Launcher)
add_subdirectory (libCompression)
add_subdirectory (libStringConverter)
add_subdirectory (CrnlibWrap)
add_subdirectory (AssetsTools)
add_subdirectory (ModInstaller)
add_subdirectory (UABE_Generic)

# Platform-specific modules
if(WIN32)
    add_subdirectory (UABE_Win32)
elseif(APPLE)
    add_subdirectory (UABE_macOS)
else()
    # For Linux and other Unix-like systems, we use the macOS implementation as a base for console mode
    message(STATUS "Building for Unix/Linux - using console-based macOS implementation")
    add_subdirectory (UABE_macOS)
endif()

add_subdirectory (Plugins)

# Optional TexToolWrap (requires PVRTexTool)
find_package(PVRTexTool QUIET)
if(PVRTexTool_FOUND)
    message(STATUS "PVRTexTool found - building TexToolWrap")
    add_subdirectory (TexToolWrap)
else()
    message(STATUS "PVRTexTool not found - skipping TexToolWrap")
endif()
